--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "deploy": "gh-pages -d . -b production --src original/ --add original/",
+    "deploy": "gh-pages -d original -b production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
